Added rage (test)

--- a/CSGOSimple/CSGOSimple.vcxproj
+++ b/CSGOSimple/CSGOSimple.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="features\item_definitions.cpp" />
     <ClCompile Include="features\kit_parser.cpp" />
     <ClCompile Include="features\parser.cpp" />
+    <ClCompile Include="features\ragebot.cpp" />
     <ClCompile Include="features\skins.cpp" />
     <ClCompile Include="features\visuals.cpp" />
     <ClCompile Include="helpers\input.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="features\item_definitions.h" />
     <ClInclude Include="features\kit_parser.h" />
     <ClInclude Include="features\parser.h" />
+    <ClInclude Include="features\ragebot.hpp" />
     <ClInclude Include="features\skins.h" />
     <ClInclude Include="helpers\prediction.hpp" />
     <ClInclude Include="imgui\impl\imgui_impl_dx9.h" />
