--- a/CSGOSimple/CSGOSimple.vcxproj.filters
+++ b/CSGOSimple/CSGOSimple.vcxproj.filters
@@ -139,6 +139,15 @@
     <ClCompile Include="features\ragebot.cpp">
       <Filter>Source Files\features</Filter>
     </ClCompile>
+    <ClCompile Include="features\antiaim.cpp">
+      <Filter>Source Files\features</Filter>
+    </ClCompile>
+    <ClCompile Include="features\misc.cpp">
+      <Filter>Source Files\features</Filter>
+    </ClCompile>
+    <ClCompile Include="features\resolver.cpp">
+      <Filter>Source Files\features</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="features\bhop.hpp">
@@ -428,6 +437,15 @@
     </ClInclude>
     <ClInclude Include="user.hpp">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="features\antiaim.hpp">
+      <Filter>Source Files\features</Filter>
+    </ClInclude>
+    <ClInclude Include="features\misc.hpp">
+      <Filter>Source Files\features</Filter>
+    </ClInclude>
+    <ClInclude Include="features\resolver.h">
+      <Filter>Source Files\features</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
