Weapon group now redisign

--- a/CSGOSimple/CSGOSimple.vcxproj
+++ b/CSGOSimple/CSGOSimple.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="valve_sdk\netvars.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bytes.hpp" />
     <ClInclude Include="Clantag.h" />
     <ClInclude Include="features\aimbot.hpp" />
     <ClInclude Include="features\antiaim.hpp" />
