--- a/CSGOSimple/CSGOSimple.vcxproj
+++ b/CSGOSimple/CSGOSimple.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="lua\CLuaHook.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
+    <ClCompile Include="nightmode.cpp" />
     <ClCompile Include="options.cpp" />
     <ClCompile Include="render.cpp" />
     <ClCompile Include="ui.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="lua\luaconf.h" />
     <ClInclude Include="lua\lualib.h" />
     <ClInclude Include="lua\sol.hpp" />
+    <ClInclude Include="nightmode.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="user.hpp" />
     <ClInclude Include="valve_sdk\interfaces\IGameTypes.hpp" />
