--- a/CSGOSimple/CSGOSimple.vcxproj
+++ b/CSGOSimple/CSGOSimple.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="features\antiaim.cpp" />
     <ClCompile Include="features\autowalk.cpp" />
     <ClCompile Include="features\autowall.cpp" />
+    <ClCompile Include="features\backtrack.cpp" />
     <ClCompile Include="features\bhop.cpp" />
     <ClCompile Include="features\chams.cpp" />
     <ClCompile Include="features\fakelag.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="features\antiaim.hpp" />
     <ClInclude Include="features\autowalk.hpp" />
     <ClInclude Include="features\autowall.hpp" />
+    <ClInclude Include="features\backtrack.hpp" />
     <ClInclude Include="features\fakelag.hpp" />
     <ClInclude Include="features\item_definitions.h" />
     <ClInclude Include="features\kit_parser.h" />
